--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,16 @@ project(GLCPP)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "-g -Wall")
-set(IS_MACOS 0)
 
-set(SOURCE_FILES main.cpp glad/glad.c shader/Shader.cpp shader/Shader.h shape/Triangle.cpp shape/Triangle.h utils/stb_image.h shape/TextureRect.cpp shape/TextureRect.h utils/stb_image_compile.cpp shape/Cube.cpp shape/Cube.h utils/Camera.cpp utils/Camera.h)
+message("is APPLE : ${APPLE}")
+
+set(IS_MACOS 1)
+
+set(SOURCE_FILES main.cpp glad/glad.c shader/Shader.cpp shader/Shader.h shape/Triangle.cpp shape/Triangle.h utils/stb_image.h shape/TextureRect.cpp shape/TextureRect.h utils/stb_image_compile.cpp shape/Cube.cpp shape/Cube.h utils/Camera.cpp utils/Camera.h camermaMain.cpp)
 
 add_executable(GLCPP ${SOURCE_FILES})
 
-if (${IS_MACOS} MATCHES 1)
+if (${APPLE})
 
     #Mac 环境
     message("oh mac os !")
